@@ -4,7 +4,7 @@ from pyasn1.type import univ
 from pyasn1.codec.ber import encoder
 
 class BooleanEncoder(encoder.IntegerEncoder):
-    def _encodeValue(self, encodeFun, client, defMode, maxChunkSize):
+    def encodeValue(self, encodeFun, client, defMode, maxChunkSize):
         if client == 0:
             substrate = '\000'
         else:
@@ -12,14 +12,14 @@ class BooleanEncoder(encoder.IntegerEncoder):
         return substrate, 0
 
 class BitStringEncoder(encoder.BitStringEncoder):
-    def _encodeValue(self, encodeFun, client, defMode, maxChunkSize):
-        return encoder.BitStringEncoder._encodeValue(
+    def encodeValue(self, encodeFun, client, defMode, maxChunkSize):
+        return encoder.BitStringEncoder.encodeValue(
             self, encodeFun, client, defMode, 1000
             )
 
 class OctetStringEncoder(encoder.OctetStringEncoder):
-    def _encodeValue(self, encodeFun, client, defMode, maxChunkSize):
-        return encoder.OctetStringEncoder._encodeValue(
+    def encodeValue(self, encodeFun, client, defMode, maxChunkSize):
+        return encoder.OctetStringEncoder.encodeValue(
             self, encodeFun, client, defMode, 1000
             )
 
@@ -35,7 +35,7 @@ class SetOfEncoder(encoder.SequenceOfEncoder):
             getattr(c2, 'getMinimalTagSet', c2.getTagSet)()
             )
     
-    def _encodeValue(self, encodeFun, client, defMode, maxChunkSize):
+    def encodeValue(self, encodeFun, client, defMode, maxChunkSize):
         if hasattr(client, 'setDefaultComponents'):
             client.setDefaultComponents()
         client.verifySizeSpec()
